# switchbox

./: .pre-commit-config.yaml  Justfile  README.md  pyproject.toml
.github/workflows/: python.yaml
switchbox/: __main__.py  app.py  branches.py  cli.py  plan.py  repo.py  repository.py
switchbox/ext/: git.py  rich.py
switchbox/tests/: test_repo.py  test_repository.py
