[tool.poetry]
name = "git-switchbox"
version = "0.1.0"
description = ""
authors = ["Sam Clements <sam@borntyping.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.5.1"
click = "^8.1.3"
giturl = "^0.1.3"
inflect = "^6.0.0"
PyGithub = "^1.55"
GitPython = "^3.1.27"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
